[BE] CRS - 27: update search course